--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,54 @@ body::-webkit-scrollbar-thumb:active {
   align-items: center;
   padding: 0rem 2rem;
 }
+.header .navR .nav-list .pop-up-connexion-inscription {
+  display: block;
+  position: absolute;
+  top: 3.5rem;
+  width: 25rem;
+  height: 20rem;
+  margin: 1rem 1.5rem;
+  border-radius: 0 40px;
+  background: rgba(255, 255, 255, 0.25);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  padding: 0.5rem;
+}
+.header .navR .nav-list .pop-up-connexion-inscription .pop-up-connexion-inscription-header {
+  text-align: center;
+  padding: 0 0 1rem 0;
+}
+.header .navR .nav-list .pop-up-connexion-inscription .pop-up-connexion-inscription-body form input[type=submit] {
+  margin: 0 0 0.5rem 0;
+  height: 1.5rem;
+  border: solid 1px #000;
+  border-radius: 5px;
+  padding: 0.25rem;
+  width: 8rem;
+  background: rgba(255, 255, 255, 0.25);
+}
+.header .navR .nav-list .pop-up-connexion-inscription .pop-up-connexion-inscription-body form .form {
+  display: grid;
+  grid-template-columns: 8rem 12rem;
+}
+.header .navR .nav-list .pop-up-connexion-inscription .pop-up-connexion-inscription-body form .form .input-desc {
+  margin: 0 0 0.5rem 0;
+}
+.header .navR .nav-list .pop-up-connexion-inscription .pop-up-connexion-inscription-body form .form input {
+  margin: 0 0 0.5rem 0;
+  height: 1.5rem;
+  border: solid 1px #000;
+  border-radius: 5px;
+  padding: 0.25rem;
+  background: rgba(255, 255, 255, 0.25);
+}
+.header .navR .nav-list .pop-up-connexion-inscription .pop-up-connexion-inscription-footer {
+  margin-top: 1rem;
+  text-align: center;
+}
+.header .navR .nav-list .pop-up-hide {
+  display: none;
+}
 .header .navR .nav-list img {
   max-width: 1.8rem;
   width: 100%;
