--- a/css/main.scss
+++ b/css/main.scss
@@ -298,7 +298,65 @@ body {
             justify-content: center;
             align-items: center;
             padding: 0rem 2rem;
-        
+            
+            & .pop-up-connexion-inscription {
+                display: block;
+                position: absolute;
+                top: 3.5rem;
+                width: 25rem;
+                height: 20rem;
+                margin: 1rem 1.5rem;
+                border-radius: 0 40px;
+                background: rgba(255, 255, 255, 0.25);
+                backdrop-filter: blur(10px);
+                padding: .5rem;
+
+                & .pop-up-connexion-inscription-header {
+                    text-align: center;
+                    padding: 0 0 1rem 0;
+                }
+                & .pop-up-connexion-inscription-body {
+                    & form {
+
+                        & input[type="submit"] {
+                            margin: 0 0 .5rem 0;
+                            height: 1.5rem;
+                            border: solid 1px #000;
+                            border-radius: 5px;
+                            padding: .25rem;
+                            width: 8rem;
+                            background: rgba(255, 255, 255, 0.25);
+                        }
+
+                        & .form {
+                            display: grid;
+                            grid-template-columns: 8rem 12rem;
+                            
+                            & .input-desc {
+                            margin: 0 0 .5rem 0;
+                            }
+
+                            & input {
+                                margin: 0 0 .5rem 0;
+                                height: 1.5rem;
+                                border: solid 1px #000;
+                                border-radius: 5px;
+                                padding: .25rem;
+                                background: rgba(255, 255, 255, 0.25);
+                            }
+                        }
+                    }
+                }
+                & .pop-up-connexion-inscription-footer {
+                    margin-top: 1rem;
+                    text-align: center;
+                }
+            }
+
+            & .pop-up-hide {
+                display: none;
+            }
+
             & img {
                 max-width: 1.8rem;
                 width: 100%;
