--- a/admin/style/main.css
+++ b/admin/style/main.css
@@ -146,12 +146,9 @@ img {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	justify-content: space-evenly;
-	width: 100%;
-	max-width: 1032px;
+	justify-content: center;
+    align-items: center;
     margin-top: 2rem;
-	margin-left: auto;
-	margin-right: auto;
 	padding: .5rem 1rem;
 }
 
@@ -160,12 +157,8 @@ img {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        justify-content: space-evenly;
-        width: 100%;
-        max-width: 1032px;
+        justify-content: center;
         margin-top: 2rem;
-        margin-left: 406px;
-        margin-right: auto;
         padding: .5rem 1rem;
     }
 }
@@ -175,12 +168,8 @@ img {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        justify-content: space-evenly;
-        width: 100%;
-        max-width: 1032px;
+        justify-content: center;
         margin-top: 2rem;
-        margin-left: auto;
-        margin-right: auto;
         padding: .5rem 1rem;
     }
 }
